# tahm-kench

./: .env  .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  build.rs  config.toml
assets/: ZkAuction.json  erc20.json  erc721.json
contracts/: README.md  deploy.sh
contracts/broadcast/Deployer.s.sol/17000/: run-1729181327.json  run-1729181489.json
contracts/script/: Deployer.s.sol  deployer.s.sol
contracts/src/: MockNFT.sol  MockToken.sol  ZkAuction.sol  zk_auction.sol
contracts/src/mocks/: MockToken.sol
contracts/test/: ZkAuction.t.sol  zk_auction.t.sol
crates/cli/: Cargo.toml
crates/cli/assets/: ZkAuction.json  erc20.json  erc721.json
crates/cli/contracts/: .env.example  deploy.sh
crates/cli/contracts/script/: deployer.s.sol
crates/cli/contracts/src/: ZkAuction.sol
crates/cli/contracts/src/mocks/: MockNFT.sol  MockToken.sol
crates/cli/contracts/test/: ZkAuction.t.sol
crates/cli/src/: auction.rs  config.rs  lib.rs  types.rs  utils.rs
crates/cli/src/tests/: mod.rs  test_auction.rs
crates/ecies/: Cargo.toml
crates/ecies/src/: lib.rs  private_key.rs  public_key.rs
crates/ecies/src/symmetric_encryption/: mod.rs  scheme.rs  simple.rs
crates/ecies/src/utils/: math.rs
crates/prover-sdk/: Cargo.toml
crates/prover-sdk/src/: lib.rs
crates/sp1-prover/: Cargo.toml  Makefile  README.md
crates/sp1-prover/elf/: elf_commitment  elf_verifying_key  riscv32im-succinct-zkvm-elf
crates/sp1-prover/src/: lib.rs  main.rs
ecies/: Cargo.toml
ecies/src/: lib.rs  private_key.rs  public_key.rs  types.rs
ecies/src/ecc/: curve.rs  point.rs
ecies/src/symmetric_encryption/: simple.rs
prover-sdk/: Cargo.toml
prover-sdk/src/: lib.rs
sp1-prover/: Cargo.toml  Makefile  README.md
sp1-prover/elf/: riscv32im-succinct-zkvm-elf
sp1-prover/src/: lib.rs  main.rs
src/: auction.rs  auction_service.rs  config.rs  core_error.rs  lib.rs  main.rs  update_notifier.rs
src/assets/: ZkAuction.json  zk_auction.json
src/controllers/: auction.rs
src/entities/: auction.rs
src/entity/: auction.rs
src/tests/: mod.rs  test_auction.rs  test_auction_service.rs
taplo/: taplo.toml
