[package]
name = "zk_auction"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["prover-sdk"]
exclude = ["sp1-prover"]

[workspace.dependencies]
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer", tag = "v0.10.2" }
aligned-sp1-prover = { path = "sp1-prover" }
anyhow = "1.0.90"
bincode = "1.3.3"
dialoguer = "0.11.0"
ecies = { version = "0.2.6", default-features = false, features = [
  "pure",
  "std",
] }
ethers = { tag = "v2.0.15-fix-reconnections", features = [
  "ws",
  "rustls",
], git = "https://github.com/yetanotherco/ethers-rs.git" }
hex = "0.4.3"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }

[dependencies]
aligned-sdk = { workspace = true }
aligned-sp1-prover = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
bytes = "1.7.2"
chrono = "0.4.38"
clap = { version = "4.5.13", features = ["derive"] }
config = "0.14.0"
curl = "0.4.46"
dotenv = "0.15.0"
ecies = { workspace = true }
ethers = { workspace = true }
futures-util = "0.3.31"
glob = "0.3.1"
hex = { workspace = true }
home = "0.5.9"
prover-sdk = { path = "prover-sdk" }
rpassword = "7.3.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.210"
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = { workspace = true }
toml = "0.8.19"

[dev-dependencies]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2", features = [
  "keccak",
] }
