[workspace]
resolver = "2"
members = ["crates/cli", "crates/prover-sdk"]
exclude = ["crates/sp1-prover"]

[workspace.dependencies]
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer", tag = "v0.10.2" }
aligned-sp1-prover = { path = "crates/sp1-prover" }
anyhow = "1.0.90"
bincode = "1.3.3"
bytes = "1.7.2"
chrono = "0.4.38"
clap = { version = "4.5.13", features = ["derive"] }
config = "0.14.0"
curl = "0.4.46"
dialoguer = "0.11.0"
dotenv = "0.15.0"
ecies = { version = "0.2.6", default-features = false, features = [
  "pure",
  "std",
] }
ethers = { tag = "v2.0.15-fix-reconnections", features = [
  "ws",
  "rustls",
], git = "https://github.com/yetanotherco/ethers-rs.git" }
futures-util = "0.3.31"
glob = "0.3.1"
hex = "0.4.3"
home = "0.5.9"
prover-sdk = { path = "crates/prover-sdk" }
rpassword = "7.3.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.210"
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.8.19"
