[package]
name = "ecies"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { workspace = true }
hex = { workspace = true}
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2", features = ["keccak"] }

[dev-dependencies]
sp1-derive = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.1" }