[package]
name = "aligned-sp1-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.8-testnet" }
serde = "1.0.210"
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2", features = ["keccak"] }
ecies = { version = "0.2.6", default-features = false, features = ["pure", "std"]}

[dev-dependencies]
sp1-sdk = "3.0.0"
rand = "0.8.5"
