[package]
name = "aligned-sp1-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
#rsa = "0.9.6"
sp1-zkvm = "3.0.0"
serde = "1.0.210"
#serde_json = "1.0.128"
#ecies-ed25519 = "0.5.1"
#rand = "0.7.3"
#ecies = { version = "0.2.6", default-features = false, features = ["pure", "std"]}
ecies = { path = "../ecies" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2", features = ["keccak"] }
#rand = "0.8.5"
sp1-derive = "3.0.0"

[dev-dependencies]
rand = "0.8.5"
hex = "0.4.3"