[package]
name = "zk_auction"
version = "0.1.0"
edition = "2021"

[dependencies]
aligned-sdk = { workspace = true }
aligned-sp1-prover = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
curl = { workspace = true }
dotenv = { workspace = true }
ecies = { workspace = true }
ethers = { workspace = true }
futures-util = { workspace = true }
glob = { workspace = true }
hex = { workspace = true }
home = { workspace = true }
prover-sdk = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
eth-keystore = { workspace = true}

[dev-dependencies]
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2", features = [
  "keccak",
] }
