[package]
name = "ecies"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
rand = "0.8.5"
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", branch = "patch-secp256k1-v0.29.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2", features = [
  "keccak",
] }

[dev-dependencies]
#sp1-derive = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.1" }
