[package]
name = "prover-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
auction-sp1-prover = { workspace = true }
bincode = { workspace = true }
dialoguer = { workspace = true }
ecies = { workspace = true }
ethers = { workspace = true }
hex = { workspace = true }
sp1-sdk = { version = "3.0.0", features = ["native-gnark"] }
tokio = { workspace = true }

[dev-dependencies]
tiny-keccak = "2.0.2"
