[package]
name = "auction-sp1-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
ecies = { path = "../ecies" }
serde = "1.0.210"
sp1-zkvm = "3.0.0"
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2", features = [
  "keccak",
] }

[dev-dependencies]
hex = "0.4.3"
rand = "0.8.5"
